# Calculator

./: CMakeLists.txt  README.md  SettingsWindow.qml  TextInputArea.qml  TextInputField.qml  backend.cpp  backend.h  main.cpp  main.qml  qml.qrc
qml/: CustomButton.qml  CustomCheckBox.qml  SettingsWindow.qml  TextInputArea.qml  TextInputField.qml  main.qml  qml.qrc
src/: backend.cpp  backend.h  main.cpp  settings.cpp  settings.h
